[package]
name = "hidreport"
version = "0.5.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/hidutils"
repository = "https://github.com/hidutils/hut"
description = "HID Report Descriptor and HID Report parser"
exclude = [
    "/tests/data/*.hid.bin",
    "/tests/data/*.rdesc",
]

[features]
default = []


[dependencies]
thiserror-no-std="2.0.2"
